modified:   week02/styles/media-query-large.css

--- a/week02/styles/media-query-large.css
+++ b/week02/styles/media-query-large.css
@@ -1,10 +1,10 @@
-@media screen and (min-width: 400px){
+@media screen and (min-width: 500px){
     header {
         background-color: rgb(44, 44, 44) !important;
         color: whitesmoke;
     }
 
     main {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr !important;
     }
 }
