--- a/styles/filtered-temples-large.css
+++ b/styles/filtered-temples-large.css
@@ -73,6 +73,10 @@ nav ul li a {
     transition: color 0.3s ease;
 }
 
+nav a:hover {
+    color: var(--color-grey);
+}
+
 h1 { font-size: 1.5rem; }
 /* Header */
 
